# logging-handlers

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test-logging-extended-handlers.yml
src/logging_extended_handlers/: __about__.py  __init__.py  http_handler.py  smtp_handler.py
src/logging_handlers/: __init__.py  http_handler.py  smtp_handler.py
tests/manual/: test_http_handler.py
tests/unit_tests/: conftest.py  test_logging_extended_handlers.py
