[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logging-handlers"
dynamic = ["version"]
description = "Extending logging.handlers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["logging", "log", "handlers", "logging handlers", "log handlers", "http"]
authors = [
  { name = "mbirke", email = "wesci@web.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/m-birke/logging-handlers#readme"
Issues = "https://github.com/m-birke/logging-handlers/issues"
Source = "https://github.com/m-birke/logging-handlers"

[tool.hatch.version]
path = "src/logging_handlers/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/logging_handlers tests}"

[tool.coverage.run]
source_pkgs = ["logging_handlers", "tests"]
branch = true
parallel = true
omit = [
  "src/logging_handlers/__about__.py",
]

[tool.coverage.paths]
logging_handlers = ["src/logging_handlers", "*/logging-handlers/src/logging_handlers"]
tests = ["tests", "*/logging-handlers/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
